2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingFieldToNullableRuleTest.cs: New. Test cases 
	for ConsiderConvertingFieldToNullableRule [Cedric Vivier].

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyTest.cs: Add test cases for 
	Has. Patch from Cedric Vivier.

2008-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyTest.cs: Ignore Set* without
	a Get* methods. Ignore overrides (can be out of developer's control,
	but the base virtual method will be reported if not). Update to use
	new test helpers.

2008-04-03  Daniel Abramov <ex@vingrad.ru>

	* ImplementGenericCollectionInterfacesTest.cs: New. Unit tests
	for ImplementGenericCollectionInterfacesRule.
	* Test.Rules.Design.mdp: Add rule to MD project file.

2008-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Design.mdp: Add missing reference to Test.Rules
	assembly [Daniel Abramov]

2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementIComparableCorreclyTest.cs: New. Unit tests for
	ImplementIComparableCorreclyRule.
	* Test.Rules.Design.mdp: Add new rule to MD project.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDeclareProtectedFieldsInSealedClassTest.cs: Fix name change.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsTest.cs
	* AttributeArgumentsShouldHaveAccessorsTest.cs
	* AvoidEmptyInterfaceTest.cs
	* AvoidPropertiesWithoutGetAccessorTest.cs
	* AvoidPublicInstanceFieldsTest.cs
	* ConsiderConvertingMethodToPropertyTest.cs
	* DisposableFieldsShouldBeDisposedTest.cs
	* DisposableTypesShouldHaveFinalizerTest.cs
	* DontDeclareProtectedFieldsInSealedClassTest.cs
	* EnsureSymmetryForOverloadedOperatorsTest.cs
	* EnumsShouldDefineAZeroValueTest.cs
	* EnumsShouldUseInt32Test.cs
	* FinalizersShouldBeProtectedTest.cs
	* FinalizersShouldCallBaseClassFinalizerTest.cs
	* FlagsShouldNotDefineAZeroValueTest.cs